RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/29_0004/29_merged.txt
/home/dimpling/AutoSpec/out/29_0004/29_merged.c:27:3: error: unterminated comment
   27 |   /*@;
      |   ^
